# emulator-extension

./: .gitignore  PC_LOG  README.md  extension_documentation.tex  final_report.tex
src/: CMakeLists.txt  Group47.tex  Makefile  emulate.c  gpio.s  gpio2.s
src/assemble/: CMakeCache.txt  CMakeLists.txt  Makefile  assemble  assemble.c  assemble.cbp  assemble.h  binary_file_writer.c  binary_file_writer.h  cmake_install.cmake  extra_data.c  extra_data.h  fuzzing_assemble.c  instruction_assembler.c  list.c  list.h  parseBranch.c  parseBranch.h  parseDataProcessing.c  parseDataProcessing.h  parseMultiply.c  parseSingleDataTransfer.c  parseSingleDataTransfer.h  parseSpecial.c  parseUtility.c  symbol_table.c  symbol_table.h  tokenizer.c  tokenizer.h  utility.c  utility.h
src/assemble_dir/: assemble.c  assemble.h  binary_file_writer.c  binary_file_writer.h  extra_data.c  extra_data.h  parseBranch.c  parseUtility.c  parseUtility.h  symbol_table.c  symbol_table.h  token.h  tokenizer.c  tokenizer.h  utility.c  utility.h
src/assemble_dir/parse/: parseBranch.c  parseBranch.h  parseDataProcessing.c  parseDataProcessing.h  parseMultiply.c  parseMultiply.h  parseSingleDataTransfer.c  parseSingleDataTransfer.h  parseSpecial.c  parseSpecial.h  parseUtility.c  parseUtility.h
src/emulate/: .emulate_main.c.swm  .emulate_main.c.swn  .emulate_main.c.swo  .instructions.h.swo  .nfs00000001c06d8738000002b7  .nfs00000001c2fd609e00000468  1  @  CMakeCache.txt  CMakeLists.txt  Makefile  branch_instruction.c  branch_instruction.h  cmake_install.cmake  cpsr_overflow_detection.c  cpsr_overflow_detection.h  data_processing_instruction.c  data_processing_instruction.h  emulate  emulate_main.c  emulate_main.h  fuzzing.c  fuzzing_emulate.c  instructions.c  instructions.h  multiply_instruction.c  multiply_instruction.h  output_instruction_types.c  output_instruction_types.h  registers.h  rotate_right.c  rotate_right.h  single_data_transfer_instruction.c  single_data_transfer_instruction.h  util.c  util.h
src/emulate_dir/: branch_instruction.c  branch_instruction.h  cpsr_overflow_detection.c  cpsr_overflow_detection.h  data_processing_instruction.c  data_processing_instruction.h  emulate_main.c  emulate_main.h  instructions.c  multiply_instruction.c  multiply_instruction.h  single_data_transfer_instruction.c  single_data_transfer_instruction.h
src/emulate_extension/: basic_typedefs.h  dissasemble.c  dissasemble.h  emulator_main.c  emulator_main.h  grub.img  main_loop.c  main_loop.h  memory.h  test.s  test_all_runner.sh  test_generator.c  test_generator.h  zImage
src/emulate_extension/coprocessor/system_control_coprocessor/: system_control_coprocessor.c  system_control_coprocessor.h
src/emulate_extension/instructions/: data_processing.c  data_processing.h  multiply_long.c  multiply_long.h
src/emulate_extension/instructions/arm/: PSRTransfer.c  PSRTransfer.h  Undefined.c  Undefined.h  arm_instruction.c  arm_instruction.h  block_data_transfer.c  block_data_transfer.h  branch.c  branch.h  branch_and_exchange.c  branch_and_exchange.h  coprocessor_data_operations.c  coprocessor_data_operations.h  coprocessor_data_transfers.c  coprocessor_data_transfers.h  coprocessor_register_transfer.c  coprocessor_register_transfer.h  data_processing.c  data_processing.h  halfword_and_signed_data_transfer.c  halfword_and_signed_data_transfer.h  multiply.c  multiply.h  multiply_long.c  multiply_long.h  single_data_swap.c  single_data_swap.h  single_data_transfer.c  single_data_transfer.h  software_interrupt.c  software_interrupt.h
src/emulate_extension/instructions/thumb/: Hi_register_operations_branch_exchange.c  Hi_register_operations_branch_exchange.h  PCRelativeLoad.c  PCRelativeLoad.h  SP_relative_load_store.c  SP_relative_load_store.h  add_offset_to_stack_pointer.c  add_offset_to_stack_pointer.h  add_subtract.c  add_subtract.h  alu_operation.c  alu_operation.h  conditional_branch.c  conditional_branch.h  load_address.c  load_address.h  load_store_halfword.c  load_store_halfword.h  load_store_register_offset.c  load_store_register_offset.h  load_store_sign_extended_byte_half_word.c  load_store_sign_extended_byte_half_word.h  load_store_with_immediate_offset.c  load_store_with_immediate_offset.h  long_branch_with_link.c  long_branch_with_link.h  move_compare_add_subtract.c  move_compare_add_subtract.h  move_shifted_register.c  move_shifted_register.h  multiple_load_store.c  multiple_load_store.h  push_pop_registers.c  push_pop_registers.h  software_interrupt_thumb.c  software_interrupt_thumb.h  thumb_instruction.c  thumb_instruction.h  unconditional_branch.c  (+1 more)
src/emulate_extension/mmu/: address.c  address.h  backwards_first_level_descriptor_format.c  backwards_first_level_descriptor_format.h  backwards_second_level_descriptor.c  backwards_second_level_descriptor.h  coarse_page_table.c  coarse_page_table.h  domain.h  extended_small_page.h  first_level_descriptor.c  first_level_descriptor.h  large_page.h  mmu_main.h  second_level_descriptor.c  second_level_descriptor.h  section.c  section.h  serial_console.c  serial_console.h  small_page.h  supersection.h  translation.c  translation.h  v6_first_level_descriptor_format.c  v6_first_level_descriptor_format.h  v6_second_level_descriptor.c  v6_second_level_descriptor.h
src/emulate_extension/persistant_storage/: persistent_disk.c  persistent_disk.h
src/emulate_extension/sorta_a_bios/: bootloader.c  bootloader.h
src/emulate_extension/state/: emulator_state.c  emulator_state.h  exception.c  exception.h  memory.c  memory.h
src/emulate_extension/test_suite/: combiner.c  combiner.h
src/emulate_extension/util/: address.c  address.h  common_enums.c  common_enums.h  cpsr_util.c  cpsr_util.h  entry_point.c  entry_point.h  logger.c  logger.h  operand_two_util.c  operand_two_util.h  overflow_util.c  overflow_util.h  shift_util.c  shift_util.h  static_asserts.c  static_asserts.h
src/shared/: branch_instruction.h  common_structs.h  data_processing_instruction.h  enums.h  instructions.h  multiply_instruction.h  single_data_transfer_instruction.h
src/untitled/: main.c
(+133 files in other folders)
